--- a/style.css
+++ b/style.css
@@ -11,9 +11,8 @@
 
 .info {
   background-color: #e2e2e7c1;
+  border: #9e9e9e80 1px solid;
   border-radius: 15px;
-  margin-top: 10px;
-  margin: 10px;
   padding: 15px;
   text-align: center;
   text-align: justify;
